--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,6 @@
 </head>
 <body>
 <!-- chama componentes, carrega abaixo os componentes do app.components.ts -->
-  <app-root>
-
-
-  </app-root>
+  <app-root></app-root> <!-- aqui chama o component raiz -->
 </body>
 </html>
